manifests/backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-deploy
  namespace: bookstore-app
  labels:
    app: bookstore-backend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: bookstore-backend
  template:
    metadata:
      labels:
        app: bookstore-backend
    spec:
      containers:
      - name: backend
        image: bprathap104/bookstore-backend:1.3
        ports:
        - containerPort: 5000
        readinessProbe:
          httpGet:
            path: /health
            port: 5000
          initialDelaySeconds: 5
          periodSeconds: 5
        livenessProbe:
          httpGet:
            path: /health
            port: 5000
          initialDelaySeconds: 10
          periodSeconds: 10
      - name: logger
        image: busybox
        command: ['sh', '-c', 'tail -n 100 -f /var/log/backend.log']
        volumeMounts:
        - name: log-volume
          mountPath: /var/log
      volumes:
      - name: log-volume
        emptyDir: {}
---
apiVersion: v1
kind: Service
metadata:
  name: backend-svc
  namespace: bookstore-app
spec:
  type: ClusterIP
  selector:
    app: bookstore-backend
  ports:
  - port: 5000
    targetPort: 5000
