manifests/frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-deploy
  namespace: bookstore-app
  labels:
    app: bookstore-frontend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: bookstore-frontend
  template:
    metadata:
      labels:
        app: bookstore-frontend
    spec:
      containers:
      - name: frontend
        image: bprathap104/bookstore-frontend:1.8
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: frontend-svc
  namespace: bookstore-app
spec:
  type: NodePort
  selector:
    app: bookstore-frontend
  ports:
  - port: 80
    targetPort: 80
    nodePort: 30080
